fixing DDPG v. DDBG typo error and adding code for pulling back test data and getting the MVO (mean variance opt.) and trying to return the mean. Current bug of an array being returned as 0's. Will be working on solving bug next- SK

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .env
 .DS_Store
-trade_data.csv
-train_data.csv
+./data_sets/trade_data.csv
+./data_sets/train_data.csv
+./results/a2c/events.out.tfevents.1708739788.Scotts-MacBook-Pro.local.35285.0
